--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 		<div class="w3-container">
 <!--images -->	
 <div class="w3-content w3-display-container" style="max-width:100%">
-  <img class="mySlides" src="./images/img01.jpg" style="width:100%">
-  <img class="mySlides" src="./images/img02.jpg" style="width:100%">
-  <img class="mySlides" src="./images/img03.jpg" style="width:100%">
-  <img class="mySlides" src="./images/img04.jpg" style="width:100%">
+  <img class="mySlides" src="./images/IMG01.jpg" style="width:100%">
+  <img class="mySlides" src="./images/IMG02.jpg" style="width:100%">
+  <img class="mySlides" src="./images/IMG03.jpg" style="width:100%">
+  <img class="mySlides" src="./images/IMG04.jpg" style="width:100%">
   <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
     <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
     <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
